[package]
name = "kajar-import"
version = "0.1.0"
edition = "2021"

[features]
cc_psx = []
cc_win = []
ct_android = []
ct_ios = []
ct_nds = []
ct_psx = []
ct_snes = []
ct_win = ["dep:libz-sys"]
default = ["ct_win"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.4", features = ["bytemuck"] }
bytemuck = "1.13.1"
bytemuck_derive = "1.4.1"
bytes = "1.4.0"
indexmap = "2.0.0"
libz-sys = { version = "1.1.11", optional = true }
murmurhash32 = "0.3.0"
png = "0.17.9"
