[package]
name = "kajar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bevy = "0.10.0"
bevy_mod_scripting = { git = "https://github.com/makspll/bevy_mod_scripting.git" }
bitflags = "2.3.3"
