[package]
name = "openct-import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bitflags = "2.3.2"
bytemuck = "1.13.1"
bytes = "1.4.0"
csv = "1.2.2"
flate2 = "1.0.26"
nom = "7.1.3"
