[package]
name = "openct-import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bitflags = "2.3.2"
blowfish = "0.9.1"
bytemuck = "1.13.1"
bytemuck_derive = "1.4.1"
bytes = "1.4.0"
cipher = "0.4.4"
indexmap = "2.0.0"
libz-sys = "1.1.11"
murmurhash32 = "0.3.0"
nom = "7.1.3"
